# RegPulse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_SETUP_GCP.md  DEVELOPMENT_PLAN.md  GCP_DEPLOY_RUNBOOK.md  HANDOVER.md  HANDOVER_DESIGN_V2.md  Improv_Regpulse_v1.md  LEARNINGS.md  MEMORY.md  Makefile  ONBOARDING_AND_GCP_DEPLOYMENT_GUIDE.md  PRODUCTION_PLAN.md  README.md  RegPulse_FSD_v2.md  RegPulse_FSD_v3.md  RegPulse_FSD_v4.md  RegPulse_PRD_v2.md  RegPulse_PRD_v3.md  RegPulse_PRD_v4.md  STAGING_READY_CHECKLIST.md  TEAM_HANDOVER.md  TECHNICAL_DOCS.md  TESTCASES.md  UAT_PLAN.md  UAT_RESULTS.md  context.md  docker-compose.yml  pyproject.toml  regpulse_mockup_all_screens.html  regpulse_v2_mockup_inlined.html  spec.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: cache.py  config.py  db.py  exceptions.py  main.py  rate_limit.py
backend/migrations/: 001_initial_schema.sql  002_sprint3_knowledge_graph.sql  003_sprint4_confidence.sql  004_sprint5.sql  005_sprint6_system_user.sql  006_fix_vector_dims.sql  006_scraper_failed_extractions.sql
backend/scripts/: backfill_embeddings.py  backfill_kg.py  backfill_question_embeddings.py  seed_demo.py
backend/tests/: .env.test  conftest.py
config/: free_email_blocklist.json
files/: RegPulse_ClaudeCode_50Prompts.docx  RegPulse_FSD_v1.0.docx  RegPulse_FSD_v2.0.docx  RegPulse_PRD_v1.0.docx  RegPulse_PRD_v2.0.docx  RegPulse_RevisedPrompts_v2.docx
files/design-v2/: README.md  regpulse_enhanced_mockup_v2.html
frontend/: .eslintrc.json  Dockerfile  cloudbuild.yaml  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: middleware.ts
nginx/: nginx.conf
scraper/: .gcloudignore  Dockerfile  celery_app.py  config.py  db.py  requirements.txt  run_oneshot.py  tasks.py
scraper/crawler/: rbi_crawler.py  rss_fetcher.py
scraper/extractor/: constants.py  metadata_extractor.py  pdf_extractor.py
scraper/processor/: chunker.py  embedder.py  entity_extractor.py  impact_classifier.py  news_relevance.py  supersession_resolver.py
scraper/scripts/: __init__.py  backfill_chunks.py
scraper/tests/: test_audit_log.py  test_entity_extractor.py  test_pdf_extractor.py  test_rss_fetcher.py
scripts/: jira.sh  launch_check.sh
scripts/gcp/: phase2_poll.sh  phase2_resume.sh  phase2_retry_sql.sh  phase3a_internal_secrets.sh  phase3b_external_secrets.sh  phase3c_runtime_sa.sh  phase4ab_registry_vpc.sh  phase4c_migrations.sh  phase4c_reset_and_migrate.sh  phase4d_build_backend.sh  phase4e_deploy_backend.sh  phase4f_build_frontend.sh  (+5 more)
(+173 files in other folders)
